--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -1,9 +1,8 @@
 @import "../../styles/variables";
 
 .section {
-  margin-top: 6vh;
-  height: 94vh;
-  top: 6vh;
+  height: 100%;
+  padding-top: 6vh;
 }
 
 .sectionTitle {
