finished bundles selection section

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,4 +7,9 @@ $theme-colors: (
         "success":    #589e00,
         "warning":    #ffbd5e,
         "danger":     #ef0064,
+        "yellow":     #F2FF49,
+        "pink":       #FB62F6,
+        "blue":       #5AA9E6,
 );
+
+$text-dark: #0C2231;
