--- a/styles/global.scss
+++ b/styles/global.scss
@@ -22,3 +22,11 @@
 .pin-space {
   padding-bottom: 300px;
 }
+
+.close-button {
+  color: #ffffff;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0;
+}
