--- a/components/CountrySearch/CountrySearch.module.scss
+++ b/components/CountrySearch/CountrySearch.module.scss
@@ -2,6 +2,7 @@
 
 .main {
   width: 100%;
+  height: 100%;
 }
 
 .container {
@@ -9,21 +10,25 @@
 }
 
 .mainInput {
-  color: rgba(0, 0, 0, 0.8);
+  color: $text-dark;
   position: relative;
   background: transparent;
   outline: 2px solid transparent;
   outline-offset: 2px;
   padding: 0.5rem;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 3px solid map-get($theme-colors, 'blue');
   border-radius: 0.5rem;
   width: 100%;
   height: 3rem;
+
+  &::placeholder {
+    color: $text-dark;
+  }
 }
 
 .listBox {
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.7);
   border-radius: 0.5rem;
 }
 
@@ -45,10 +50,29 @@
 .cancelButton {
   position: absolute;
   left: 0.5rem;
-  top: 0.5rem;
+  top: 50%;
+  transform: translateY(-50%);
   background: transparent;
   border: none;
   outline: none;
   cursor: pointer;
   z-index: 1;
+  display: flex;
+  align-items: center;
+}
+
+.cancelButton path {
+  color: map-get($theme-colors, 'blue');
+}
+
+.selectionContainer {
+  height: 67%;
+}
+
+.selectionMedia {
+  height: 42%;
+}
+
+.countryMapImage {
+  filter: invert(60%) sepia(61%) saturate(608%) hue-rotate(178deg) brightness(95%) contrast(90%);
 }
