--- a/components/Bundles/BundleCard.module.scss
+++ b/components/Bundles/BundleCard.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .bundleCardMain {
-  background-color: map-get($theme-colors, "pink");
+  background-color: map-get($theme-colors, "light");
   width: 100%;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .bundleCardListItem {
-  background-color: map-get($theme-colors, "pink");
+  background-color: map-get($theme-colors, "light");
   font-size: 0.875rem;
   cursor: pointer;
 
