--- a/components/QnA/QnaSection.module.scss
+++ b/components/QnA/QnaSection.module.scss
@@ -1,3 +1,6 @@
 @import "../../styles/variables.scss";
 
-
+.qnaSection {
+  background-color: map-get($theme-colors, "yellow");
+  height: 100vh;
+}
