--- a/components/Timeline/TimelineItem.module.scss
+++ b/components/Timeline/TimelineItem.module.scss
@@ -40,6 +40,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
+  height: 59%;
   text-align: center;
   padding: 15px 10px 10px 10px;
   color: rgba(0, 0, 0, 0.5) !important;
