--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 .main {
+  padding: 1rem;
   height: 20vh;
   background-image: linear-gradient(
                   145deg,
@@ -21,4 +22,12 @@
                   hsl(219deg 40% 36%) 100%
   );
   background-size: cover;
+}
+
+.footerDescription {
+  font-size: 0.875rem;
+}
+
+.copyright {
+  margin-right: 1rem;
 }
