--- a/components/SearchAutocomplete/SearchAutocomplete.module.scss
+++ b/components/SearchAutocomplete/SearchAutocomplete.module.scss
@@ -1,19 +1,19 @@
 @import "styles/variables";
 
 .mainInput {
-  background-color: map-get($theme-colors, "light");
-  color: $text-dark;
+  background-color: $background-color;
+  color: $text-color;
   position: relative;
   outline: 2px solid transparent;
   outline-offset: 2px;
   padding: 0.5rem;
-  border: 3px solid map-get($theme-colors, 'blue');
+  border: 3px solid $secondary-color;
   border-radius: 0.5rem;
   width: 100%;
   height: 3rem;
 
   &::placeholder {
-    color: $text-dark;
+    color: $text-color;
   }
 }
 
@@ -40,5 +40,5 @@
 }
 
 .cancelButton path {
-  color: map-get($theme-colors, 'blue');
+  color: $secondary-color;
 }
