--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,16 +1,18 @@
-$body-bg: #ffffff;
-$white: #ffffff;
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/maps";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/root";
 
-.btn-outline-primary {
-  $bs-btn-color: #ffffff;
+.btn-primary {
+  --bs-btn-bg: #F5F5F5;
+  --bs-btn-color: #4502C6;
+  --bs-btn-hover-bg: #4502C6;
+  --bs-btn-border-color: #4502C6;
 }
 
-.navbar-light .navbar-brand {
-  width: 6.25rem;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: #ffffff;
-}
+$spacers: (
+  6: $spacer * 6
+);
 
 @import "~bootstrap/scss/bootstrap";
