--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .main {
   padding: 1rem;
-  height: 20vh;
+  height: 30vh;
   background-image: linear-gradient(
                   145deg,
                   hsl(13deg 100% 51%) 0%,
@@ -25,7 +25,8 @@
 }
 
 .footerDescription {
-  font-size: 0.875rem;
+  margin-top: 0.5rem;
+  font-size: 0.8rem;
 }
 
 .copyright {
