--- a/styles/global.scss
+++ b/styles/global.scss
@@ -43,3 +43,11 @@ h1, h2, h3, h4, h5, h6 {
     color: map-get($theme-colors, 'blue');
   }
 }
+
+.modal-header .btn-close {
+  margin: 0
+}
+
+.modal {
+  --bs-modal-bg: #F5F5F5;
+}
