--- a/components/Order/OrderModal.module.scss
+++ b/components/Order/OrderModal.module.scss
@@ -55,8 +55,23 @@
     border-radius: 0.5rem;
     height: 3rem;
   }
+
+  :global .react-datepicker__close-icon {
+    right: 82% !important;
+
+    &::after {
+      background-color: transparent;
+      font-size: 22px;
+    }
+  }
 }
 
 .submitButton {
   color: $background-color !important;
+}
+
+.errorMessage {
+  color: map-get($theme-colors, 'danger') !important;
+  font-size: 0.7rem;
+  margin-top: 0.1rem;
 }
