--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,6 +15,8 @@ $background-color: map-get($theme-colors, 'light');
 $primary-color: map-get($theme-colors, 'primary');
 $secondary-color: map-get($theme-colors, 'secondary');
 
+$page-height: 64.5vh;
+
 @mixin shadow {
   -webkit-box-shadow: 0px 3px 15px 5px rgba(0,0,0,0.25);
   box-shadow: 0px 3px 15px 5px rgba(0,0,0,0.25);
