--- a/styles/verify.module.scss
+++ b/styles/verify.module.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 .signIn {
-  height: 64vh;
+  height: $page-height;
   background-color: $background-color;
 
   :global * {
