--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -21,20 +21,33 @@
   }
 }
 
-.errorIcon {
+.inputEnd {
   position: absolute;
-  left: 0.7rem;
+  left: 0.5rem;
   top: 50%;
-  transform: translateY(-50%) !important;
+  transform: translateY(-50%);
+
+  :global button {
+    background-color: transparent;
+    border: none;
+    color: $text-color;
+    outline: none;
+    border-radius: 100%;
+    margin-left: 0.2rem;
+
+    :global path {
+      color: $text-color;
+    }
+  }
+}
+
+.errorIcon {
+  margin-right: 0.2rem;
   :global path {
     color: map-get($theme-colors, 'danger') !important;
   }
 }
 
 .errorMessage {
-  position: absolute;
-  left: 1.5rem;
-  top: 50%;
-  transform: translateY(-50%) !important;
   color: map-get($theme-colors, 'danger') !important;
 }
