--- a/components/Order/OrderModal.module.scss
+++ b/components/Order/OrderModal.module.scss
@@ -61,6 +61,7 @@
 
     &::after {
       background-color: transparent;
+      color: $text-color;
       font-size: 22px;
     }
   }
@@ -74,4 +75,44 @@
   color: map-get($theme-colors, 'danger') !important;
   font-size: 0.7rem;
   margin-top: 0.1rem;
+}
+
+.spinnerContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.statusIconSuccess {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  :global svg {
+    height: 1.5rem;
+  }
+
+  :global path {
+    color: map-get($theme-colors, 'success');
+  }
+}
+
+.statusIconWarning {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  :global svg {
+    height: 1.5rem;
+  }
+
+  :global path {
+    color: map-get($theme-colors, 'danger');
+  }
 }
