--- a/components/CheckPhone/CheckPhoneSection.module.scss
+++ b/components/CheckPhone/CheckPhoneSection.module.scss
@@ -26,11 +26,20 @@
   margin-bottom: 1rem;
 }
 
-.listBox {
-  margin-top: 0.5rem;
-  width: 100%;
-  border: 3px solid map-get($theme-colors, 'primary');
+.listBoxContainer {
+  height: 46vh;
+  background-color: map-get($theme-colors, 'light');
+  padding: 0.5rem 0;
   border-radius: 0.5rem;
+  margin-top: 0.5rem;
+  border: 3px solid map-get($theme-colors, 'primary');
+}
+
+.listBox {
+  height: 44vh !important;
+  background-color: map-get($theme-colors, 'light');
+  width: 100%;
+  overflow-y: auto;
 }
 
 .listBoxItem {
