--- a/styles/global.scss
+++ b/styles/global.scss
@@ -98,3 +98,7 @@ li.enable-button-user-ipv6 {
 div#enable-modal * {
   color: $text-color !important;
 }
+
+#react-select-5-listbox {
+  z-index: 100;
+}
