--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 
 .main {
   padding: 1rem;
-  height: 30vh;
+  height: 100%;
   background-image: linear-gradient(
     145deg,
     hsl(13deg 100% 51%) 0%,
@@ -32,7 +32,21 @@
   }
 }
 
+.row {
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    flex-direction: column !important;
+    text-align: center !important;
+  }
+}
+
 .footerDescription {
   margin-top: 0.5rem;
   font-size: 0.8rem;
+}
+
+.logo {
+  @media (max-width: map-get($grid-breakpoints, 'sm')) {
+    justify-content: center !important;
+    margin: .5rem 0;
+  }
 }
