--- a/components/Order/OrderModal.module.scss
+++ b/components/Order/OrderModal.module.scss
@@ -77,6 +77,7 @@
 
 .couponButton {
   color: map-get($theme-colors, 'success') !important;
+  margin-top: 1rem;
 
   &:hover {
     color: map-get($theme-colors, 'light') !important;
