--- a/components/SearchAutocomplete/SearchAutocomplete.module.scss
+++ b/components/SearchAutocomplete/SearchAutocomplete.module.scss
@@ -20,6 +20,11 @@
   padding: 0.5rem 0;
   border-radius: 0.5rem;
   margin-top: 0.5rem;
+
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    position: absolute;
+    z-index: 1;
+  }
 }
 
 .listBox {
