--- a/components/Timeline/TimelineItem.module.scss
+++ b/components/Timeline/TimelineItem.module.scss
@@ -7,6 +7,16 @@
   border-radius: 2rem;
   background-color: $primary-color;
   @include shadow;
+
+  @media (max-width: map-get($grid-breakpoints, 'lg')) {
+    height: 40vh;
+  }
+
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    width: 90%;
+    height: 40vh;
+    margin-bottom: 2rem;
+  }
 }
 
 .timelineItemText {
@@ -30,6 +40,11 @@
   transition: display 0.3s;
   width: 100%;
   height: 100%;
+
+    @media (max-width: map-get($grid-breakpoints, 'md')) {
+      flex-direction: column !important;
+      justify-content: space-around !important;
+    }
 }
 
 .tooltip {
