--- a/components/Timeline/TimelineSection.module.scss
+++ b/components/Timeline/TimelineSection.module.scss
@@ -10,6 +10,10 @@
     top: 0;
     left: 0;
   }
+
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    height: 100% !important;
+  }
 }
 
 .iconContainer svg {
