--- a/styles/Transfer.module.scss
+++ b/styles/Transfer.module.scss
@@ -4,9 +4,13 @@
   padding: 1rem;
   background-color: $background-color;
   width: 100%;
-  height: 65vh;
+  height: $page-height;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: map-get($grid-breakpoints, "lg")) {
+    height: 100%;
+  }
 }
