--- a/components/Bundles/BundleCard.module.scss
+++ b/components/Bundles/BundleCard.module.scss
@@ -1,24 +1,20 @@
 @import 'styles/variables';
 
 .bundleCardContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: $background-color;
-  position: absolute;
-  top: 50%;
-  right: 50%;
-  transform: translateX(50%) translateY(-50%) !important;
-  width: 17rem;
   border-radius: 50%;
   cursor: pointer;
+  height: 15rem;
+  width: 15rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .bundleCardMain {
   background-color: map-get($theme-colors, 'orange');
   border-radius: 25rem;
-  width: 17rem;
-  height: 17rem;
+  width: 15rem;
+  height: 15rem;
   cursor: pointer;
 }
 
