--- a/components/Bundles/BundlesSection.module.scss
+++ b/components/Bundles/BundlesSection.module.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
 
   @media (max-width: map-get($grid-breakpoints, 'md')) {
-    height: 118vh !important;
+    height: 100% !important;
   }
 }
 
@@ -36,8 +36,18 @@
 
 .orderButton {
   width: 60vw;
+
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+      font-size: 0.8rem !important;
+      width: 50vw !important;
+  }
 }
 
 .cancelButton {
   width: 20vw;
+
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    font-size: 0.8rem !important;
+    width: 30vw !important;
+  }
 }
