moved bundles section to bellow cover and fixed some style issues

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -61,3 +61,18 @@
     height: 100%;
   }
 }
+
+.recaptchaTerms {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  direction: ltr;
+
+  :global a {
+    color: #fff;
+
+    &:hover {
+      color: $primary-color;
+    }
+  }
+}
