--- a/components/Bundles/BundlesSection.module.scss
+++ b/components/Bundles/BundlesSection.module.scss
@@ -2,12 +2,15 @@
 
 .bundlesSection {
   background-color: $primary-color;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   padding-top: 0 !important;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 
   @media (max-width: map-get($grid-breakpoints, 'lg')) {
-    height: 100% !important;
+    align-items: start !important;
   }
 }
 
