--- a/styles/slug.module.scss
+++ b/styles/slug.module.scss
@@ -22,7 +22,7 @@
 .date {
   direction: ltr;
   text-align: left !important;
-  color: $text-muted !important;
+  color: #121212 !important;
   font-size: 0.7rem;
 }
 
