--- a/components/CheckPhone/CheckPhoneSection.module.scss
+++ b/components/CheckPhone/CheckPhoneSection.module.scss
@@ -13,6 +13,7 @@
   height: 89%;
   @media (max-width: map-get($grid-breakpoints, 'md')) {
     flex-direction: column !important;
+    padding: 1rem;
   }
 }
 
@@ -87,4 +88,12 @@
 
 .disclaimer small {
   color: $text-color;
+}
+
+.orderButton {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
