--- a/components/Pagination/Pagination.module.scss
+++ b/components/Pagination/Pagination.module.scss
@@ -12,6 +12,7 @@
   border: none;
   scale: 1;
   color: #ffffff;
+  text-decoration: none;
 
   &:last-child {
     margin-right: 0;
@@ -22,4 +23,10 @@
 
 .active {
   background-color: map-get($theme-colors, 'orange');
+  cursor: default;
+  pointer-events: none;
+
+  &:hover {
+    color: #ffffff;
+  }
 }
