--- a/components/Bundles/Bundles.module.scss
+++ b/components/Bundles/Bundles.module.scss
@@ -1,6 +1,18 @@
+@import "styles/variables";
+
 .price {
   text-align: center;
   font-size: 1.5rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
+}
+
+.whiteSpaceNowrap {
+  white-space: nowrap;
+}
+
+.roamingCountriesHeader {
+  font-weight: 900;
+  margin-bottom: 0.875rem;
+  text-align: center;
 }
