added advantage points

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -73,3 +73,13 @@
     font-size: 0.875rem;
   }
 }
+
+.callToAction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+  height: 80%;
+}
