--- a/components/AdvantagePoints/AdvantagePoints.module.scss
+++ b/components/AdvantagePoints/AdvantagePoints.module.scss
@@ -1,3 +1,5 @@
+@import "styles/variables";
+
 .main {
   display: flex;
   margin-top: 2rem;
@@ -32,4 +34,8 @@
   content: '';
   width: 100%;
   height: 130px;
+
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    height: 150px;
+  }
 }
