--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -82,4 +82,9 @@
   margin-top: 2rem;
   margin-bottom: 4rem;
   height: 80%;
+
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    margin-bottom: 1rem;
+    height: 46%;
+  }
 }
