--- a/components/CheckPhone/CheckPhoneSection.module.scss
+++ b/components/CheckPhone/CheckPhoneSection.module.scss
@@ -99,6 +99,13 @@
   align-items: center;
 }
 
+.moreButtonText {
+  text-align: center;
+  color: $text-color;
+  font-size: 0.8rem;
+  margin-bottom: 0.5rem;
+}
+
 .moreButton {
   width: 50%;
   height: 3rem;
