added bottom margin to agreement checkbox

--- a/components/Order/OrderModal.module.scss
+++ b/components/Order/OrderModal.module.scss
@@ -153,3 +153,9 @@
       justify-content: center;
   }
 }
+
+.agreementCheckbox {
+  @media (max-width: map-get($grid-breakpoints, 'md')) {
+    margin-bottom: 1rem;
+  }
+}
