--- a/components/Bundles/BundleCard.module.scss
+++ b/components/Bundles/BundleCard.module.scss
@@ -6,6 +6,7 @@
   cursor: pointer;
   height: 6rem;
   width: 6rem;
+  min-width: 4rem;
   margin-left: 1rem;
   margin-right: 1rem;
   color: $text-color;
