--- a/components/Bundles/RoamingCountries.module.scss
+++ b/components/Bundles/RoamingCountries.module.scss
@@ -1,15 +1,24 @@
 @import "styles/variables";
 
 .countriesAccordion {
-  :global * :not(button) {
-    color: $text-color !important;
+  border: 1px solid #ffffff;
+  border-radius: 0.6rem;
+  font-size: 0.7rem;
+
+  :global h2 {
+    overflow: hidden;
   }
 
   :global .accordion-button {
     font-size: 0.7rem;
+    padding: 8px 16px;
+    background: transparent;
   }
 
-  font-size: 0.7rem;
+  :global .accordion-collapse.collapse.show {
+    background: transparent;
+    color: #ffffff !important;
+  }
 }
 
 .whiteSpaceNowrap {
